<resources>
    <string name="app_name">FreshGrade</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="landing_tv">Welcome to</string>
    <string name="landing_tv2">FreshGrade</string>
    <string name="landing_login">Login</string>
    <string name="landing_register">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="title_register_page">Create Account</string>
    <string name="email">Email</string>
    <string name="message_login_page">Login in Here</string>
    <string name="title_login_page">Sudah siap untuk upgrade skill?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Selamat Belajar di Dicoding.</string>
    <string name="greeting">Halo %1$s,</string>
    <string name="logout">Log out</string>
    <string name="go_to_Register">Sign Up Here</string>
    <string name="If_you_dont_have_an_acount">"Don’t have an account? "</string>
    <string name="if_you_already_have_an_acount">Already Part of Us?</string>
    <string name="go_to_login">Log In Here</string>
    <string name="error_password">Password Can\'t be less than 8 characters</string>
    <string name="login_success">login success</string>
    <string name="login_failed">login failed, try again !</string>
    <string name="register_success">register success</string>
    <string name="register_failed">register failed, try again !</string>
    <string name="make_new_story">buat cerita baru</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="dont_have_permision">"Dont have permision, please login first"</string>
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="about_desc">
        In Indonesia, the vibrant fruit markets are a cornerstone of daily life. But knowing if a fruit is truly fresh or hiding a disease can be tricky. This uncertainty can lead to wasted money for buyers and lost income for sellers, not to mention potential health risks.\n\n
        FreshGrade is here to change that. Our app empowers you to make informed choices about the fruits you buy or sell. Using the power of image recognition and machine learning, FreshGrade analyzes photos of fruits to quickly assess their condition\n\n
        For Buyers: Gain confidence in your fruit purchases, knowing you\'re selecting the freshest and healthiest options.\n
        For Sellers: Improve inventory management, reduce waste, and build trust with customers by showcasing the quality of your produce.\n\n
        FreshGrade envisions a future where everyone in Indonesia can enjoy the delicious bounty of our fruits, confident in their quality and freshness.
    </string>
    <string name="have_permision">you\'re logged in</string>
    <string name="error_invalid_email">email invalid</string>
    <string name="input_name">Input name</string>
    <string name="input_email">Input email\n</string>
    <string name="input_password">Input password</string>
    <string name="slogan">Be Active, Be Healthy, Become Fruity</string>
    <string name="password">Password</string>
    <string name="change_password">change password</string>
    <string name="frogot_your_password">frogot your password? then</string>
    <string name="error_name">name is required</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_history">History</string>
    <string name="scan_label">Scan</string>
    <string name="dashboard_label">Dashboard</string>
    <string name="article_label">Article</string>
    <string name="history_label">History</string>
    <string name="camera_label">Camera</string>
    <string name="gallery_label">Gallery</string>
    <string name="error_first_name">first name required</string>
    <string name="error_last_name">last name required</string>
    <string name="info_desc">For the time being we can only scan Mangoes, Apples and Oranges. we\'re continously working on to more fruits in the future</string>
    <string name="profile_forgot_your_pass">Forgot your password?</string>
    <string name="profile_email">Email</string>
    <string name="profile_logout_btn">Log out</string>
    <string name="change_profile">Change Profile</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="about">About</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password_failed">Failed to change password</string>
    <string name="change_password_success">Successfuly changed password</string>
    <string name="password_unauthorized_error">password dosent exist</string>
    <string name="bad_request_error">Bad Request: Please check your input and try again</string>
    <string name="password_bad_request_error">your new password needs to be difrent from your new passowrd</string>
    <string name="check_your_email_and_password">check your email and password</string>
    <string name="article_topLeftTitle">Check out the Articles!! :)</string>
    <string name="privacy_policy_description">Privacy Policy for FreshGrade\n\n At FreshGrade, accessible from , one of our main priorities is the privacy of our visitors. This Privacy Policy document contains types of information that is collected and recorded by FreshGrade and how we use it.\n\n If you have additional questions or require more information about our Privacy Policy, do not hesitate to contact us.\n\n Log Files\n\n FreshGrade follows a standard procedure of using log files. These files log visitors when they visit websites. All hosting companies do this and a part of hosting services analytics. The information collected by log files include internet protocol (IP) addresses, browser type, Internet Service Provider (ISP), date and time stamp, referring/exit pages, and possibly the number of clicks. These are not linked to any information that is personally identifiable. The purpose of the information is for analyzing trends, administering the site, tracking users movement on the website, and gathering demographic information. Our Privacy Policy was created with the help of the Privacy Policy Generator.\n\n Privacy Policies\n\n You may consult this list to find the Privacy Policy for each of the advertising partners of FreshGrade.\n\n Third-party ad servers or ad networks uses technologies like cookies, JavaScript, or Web Beacons that are used in their respective advertisements and links that appear on FreshGrade, which are sent directly to users browser. They automatically receive your IP address when this occurs. These technologies are used to measure the effectiveness of their advertising campaigns and/or to personalize the advertising content that you see on websites that you visit.\n\n Note that FreshGrade has no access to or control over these cookies that are used by third-party advertisers.\n\n Third Party Privacy Policies\n\n FreshGrade\'s Privacy Policy does not apply to other advertisers or websites. Thus, we are advising you to consult the respective Privacy Policies of these third-party ad servers for more detailed information. It may include their practices and instructions about how to opt-out of certain options.\n\n You can choose to disable cookies through your individual browser options. To know more detailed information about cookie management with specific web browsers, it can be found at the browsers\' respective websites. What Are Cookies?\n\n Children\'s Information\n\n Another part of our priority is adding protection for children while using the internet. We encourage parents and guardians to observe, participate in, and/or monitor and guide their online activity.\n\n FreshGrade does not knowingly collect any Personal Identifiable Information from children under the age of 13. If you think that your child provided this kind of information on our website, we strongly encourage you to contact us immediately and we will do our best efforts to promptly remove such information from our records.\n\n Online Privacy Policy Only\n\n This Privacy Policy applies only to our online activities and is valid for visitors to our website with regards to the information that they shared and/or collect in FreshGrade. This policy is not applicable to any information collected offline or via channels other than this website.\n\n Consent\n\n By using our website, you hereby consent to our Privacy Policy and agree to its Terms and Conditions.\n\n Generated using Privacy Policy Generator</string>
    <string name="choose_ur_picture">Choose ur picture</string>
    <string name="no_disease_detected">No Disease Detected</string>
    <string name="disease_name">Disease Name</string>
</resources>