<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_camera">

    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.example.freshgrade.ui.main.camera.CameraFragment"
        android:label="@string/scan_label"
        tools:layout="@layout/fragment_camera" >
        <action
            android:id="@+id/action_navigation_camera_to_navigation_history"
            app:destination="@id/navigation_history"
            app:enterAnim="@android:anim/slide_in_left" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.freshgrade.ui.main.history.HistoryFragment"
        android:label="@string/history_label"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_article"
        android:name="com.example.freshgrade.ui.main.article.ArticleFragment"
        android:label="@string/article_label"
        tools:layout="@layout/fragment_article" />
    <fragment
        android:id="@+id/resultFragment"
        android:name="com.example.freshgrade.ui.main.result.ResultFragment"
        android:label="fragment_result"
        tools:layout="@layout/fragment_result" />
</navigation>